--- a/src/app/auth/components/login-page/login-page.component.html
+++ b/src/app/auth/components/login-page/login-page.component.html
@@ -41,20 +41,16 @@
                         {{ 'LOGIN.INCORRECT_FORMAT' | translate }}
                     </div>
                 </div>
-                <div style="text-align: center; padding: 3px;">
-                    <button pButton pRipple type="button" class="p-button-rounded p-button-success"
-                        [disabled]="!loginForm.valid" (click)="onLoginFormSubmit()">
-                        {{ 'LOGIN.SIGNIN' | translate }}</button>
-                </div>
             </form>
-            <div style="text-align: center;padding: 3px;">
-                <p>
-                    {{ 'LOGIN.SIGN_UP_TEXT' | translate }}
-                </p>
-            </div>
 
-            <div style="text-align: center;padding: 3px;">
-                <button type="button" class="btn btn-success" routerLink="/signup">{{ 'LOGIN.SIGN_UP' | translate
+            <br/>
+            <div style="text-align: center; padding: 3px;">
+                <button type="button" class="btn btn-outline-primary" [disabled]="!loginForm.valid"
+                    (click)="onLoginFormSubmit()" style="margin-right: 15px;">
+                    {{ 'LOGIN.SIGNIN' | translate }}</button>
+
+                <button type="button" class="btn btn-outline-primary" routerLink="/auth/signup">{{ 'LOGIN.SIGN_UP' |
+                    translate
                     }}</button>
             </div>
         </div>
