--- a/src/app/features/home/components/home-page/home-page.component.html
+++ b/src/app/features/home/components/home-page/home-page.component.html
@@ -1,1 +1,11 @@
-<p>home-page works!</p>
+<div class="card-group">
+    <div style="padding: 5px; margin: 10px;" *ngFor="let movie of movies 
+        | paginate : { id: 'movie_listing_pagination',
+        itemsPerPage : 6,currentPage : page,totalItems : totalRecords}">
+        <app-movie-card [movieData]="movie"></app-movie-card>
+    </div>
+</div>
+<div class="d-flex justify-content-center" style=" margin: 0 auto; text-align: center;">
+    <pagination-controls id="movie_listing_pagination" (pageChange)="page=$event">
+    </pagination-controls>
+</div>
