--- a/src/app/auth/components/signup-page/signup-page.component.html
+++ b/src/app/auth/components/signup-page/signup-page.component.html
@@ -39,11 +39,10 @@
                         </div>
                     </div>
                 </div>
-                <br />
                 <div class="row">
                     <div class="col-md-6">
                         <label for="userName">{{ 'SIGNUP.EMAIL' | translate }}</label>
-                        <input type="userName" class="form-control" id="userName" formControlName="userName"
+                        <input type="email" class="form-control" id="userName" formControlName="userName"
                             [ngClass]="getControlValidationClasses(emailControl)">
                         <div class="invalid-feedback" *ngIf="emailControl.touched && emailControl.errors?.['required']">
                             {{ 'SIGNUP.EMAIL_REQUIRED' | translate }}
@@ -74,7 +73,6 @@
                         </div>
                     </div>
                 </div>
-                <br />
                 <div class="row">
                     <div class="col-md-6">
                         <label for="password">{{ 'SIGNUP.PASSWORD' | translate }}</label>
