--- a/src/app/auth/components/signup-page/signup-page.component.scss
+++ b/src/app/auth/components/signup-page/signup-page.component.scss
@@ -5,11 +5,30 @@
 .card-header {
     font-size: 22px;
     font-weight: bold;
+    background-color: white;
+    font-family: none;
 }
 
 label {
-    font-weight: bold;
     font-family: sans-serif;
+}
+
+.card {
+    margin: 0 auto;
+    float: none;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 9px;
+}
+
+p {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.card-header {
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align: center;
 }
 
 ::ng-deep .danger-style {
