added changes for home and movie detail page

--- a/src/app/features/home/components/movie-detail-page/movie-detail-page.component.html
+++ b/src/app/features/home/components/movie-detail-page/movie-detail-page.component.html
@@ -1,1 +1,36 @@
-<p>movie-detail-page works!</p>
+<div class="card div-data">
+    <div class="p-col-12" class="align-value">
+        <div class="movie-list-item">
+            <img src={{movieData.imageURL}} [alt]="movieData.name" />
+        </div>
+        <div class="movie-list-action">
+            <div style="margin-bottom: 1rem;">
+                <div class="movie-title">{{ movieData.title }}</div>
+                <!-- <div class="movie-name">{{ movieData.name }}</div> -->
+                <div class="movie-description">{{ movieData.description }}</div>
+                <span class="movie-ratings">
+                    <app-movie-rating [imdbRating]="movieData.imdbRating"></app-movie-rating>
+                </span>
+            </div>
+            <!-- <ul class="list-unstyled">
+                <li>{{ 'HOME.FEATURES' | translate }}:
+                    <ul *ngFor="let data of product.features" class="ul-data">
+                        <li>{{data}}</li>
+                    </ul>
+                </li>
+            </ul> -->
+            <div class="buttons-align">
+                <p-button label="{{ 'MOVIE_DETAIL.MARK_FAVORITE' | translate }}" *ngIf="!(markMovieAsFavorite)"
+                    icon="pi pi-heart" styleClass="p-button-primary" (click)="addMovieToFavorite(movieData.id)"
+                    [style]="{'margin-left': '.5em'}">
+                </p-button>
+                <p-button label="{{ 'MOVIE_DETAIL.FAVORITE_MARKED' | translate }}" *ngIf="markMovieAsFavorite" icon="pi pi-heart-fill"
+                    styleClass="p-button-primary" (click)="viewFavoriteMoviesList()" [style]="{'margin-left': '.5em'}">
+                </p-button>
+                <p-button label="{{ 'SIGNUP.CANCEL' | translate }}" icon="pi pi-times" styleClass="p-button-help"
+                    (click)="onCancelClick()">
+                </p-button>
+            </div>
+        </div>
+    </div>
+</div>
